[project]
authors = [
  {name = "m09", email = "142691+m09@users.noreply.github.com"},
]
dependencies = [
  "deal >= 4, < 5",
]
description = "Implementation and testing of a Caesar cipher."
homepage = "https://github.com/shuuchuu/caesar-cipher"
license = "Apache-2.0"
license-files = ["LICENSE"]
name = "caesar-cipher"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "hypothesis >= 6",
  "mutmut >= 3.5",
  "pytest >= 8",
  "ruff >= 0.11",
  "ty >= 0.0.33",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["D1", "D203", "D213", "RUF067"]
preview = true
select = ["A", "B", "C", "D", "DOC", "E", "EM", "F", "I", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "TC", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11,<0.12.0"]
